# py-wintasksched

./: .gitignore  README.md  pyproject.toml
src/wintasksched/: __about__.py  __init__.py  __main__.py  task.py
