[project]
name = "wintasksched"
license = {file = "LICENSE"}
description = "Interface for the Windows Task Scheduler"
requires-python = ">= 3.0"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "bytesized"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows Vista",
  "Operating System :: Microsoft :: Windows :: Windows Server 2008",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3",
]
keywords = [
  "task",
  "schedule",
  "Windows Task Scheduler",
]
dependencies = []
dynamic = [
  "version",
]

[project.urls]
Documentation = "https://github.com/bytesized/py-wintasksched"
Repository = "https://github.com/bytesized/py-wintasksched"
Issues = "https://github.com/bytesized/py-wintasksched/issues"

[build-system]
requires = [
  "hatchling>=1.25.0"
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wintasksched/__about__.py"

[tool.hatch.build]
directory = "dist"
